<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".register">

    <EditText
        android:id="@+id/r_email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"

        android:inputType="textEmailAddress"

        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/r_password"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_name" />

    <EditText
        android:id="@+id/r_cpassword"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_password" />

    <Button
        android:id="@+id/r_btn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:text="@string/register"
        android:textColor="#01A3AF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_cpassword"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/r_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_login"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_btn"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/r_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"

        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_email" />

    <EditText
        android:id="@+id/r_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="220dp"
        android:autofillHints=""
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"

        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/r_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/email_icon"
        app:layout_constraintBottom_toTopOf="@+id/r_password"
        app:layout_constraintEnd_toEndOf="@+id/r_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/r_email"
        app:layout_constraintTop_toTopOf="@+id/r_email"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/email" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/password_icon"
        app:layout_constraintBottom_toBottomOf="@+id/r_password"
        app:layout_constraintEnd_toEndOf="@+id/r_password"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="@+id/r_password"
        app:layout_constraintTop_toTopOf="@+id/r_password"
        app:srcCompat="@drawable/lock" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:contentDescription="@string/name_icon"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/r_name"
        app:layout_constraintEnd_toEndOf="@+id/r_name"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="@+id/r_name"
        app:layout_constraintTop_toTopOf="@+id/r_name"
        app:layout_constraintVertical_bias="0.35"
        app:srcCompat="@drawable/profile" />

</androidx.constraintlayout.widget.ConstraintLayout>