<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".Auth">



    <EditText
        android:id="@+id/l_email"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/l_password"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <EditText
        android:id="@+id/l_password"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="372dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/email_icon"
        app:layout_constraintBottom_toBottomOf="@+id/l_email"
        app:layout_constraintEnd_toEndOf="@+id/l_email"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/l_email"
        app:layout_constraintTop_toTopOf="@+id/l_email"
        app:srcCompat="@drawable/email" />

    <Button
        android:id="@+id/l_btn"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:text="@string/login"
        android:textColor="#01A3AF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_password"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/l_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_register"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/l_btn"
        app:layout_constraintVertical_bias="0.125" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/l_password"
        app:layout_constraintEnd_toEndOf="@+id/l_password"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="@+id/l_password"
        app:layout_constraintTop_toTopOf="@+id/l_password"

        app:srcCompat="@drawable/lock" />
</androidx.constraintlayout.widget.ConstraintLayout>